# tf

./: TF.drawio  TODO
codigo/: .dockerignore  .gitignore  Makefile  README.md  TODO  go.mod  go.sum  run.sh
codigo/PKI/: .gitignore  Makefile  README.md  env  openssl.conf
codigo/PKI/client/certs/: client.crt
codigo/PKI/client/csr/: client.csr
codigo/PKI/client/private/: client.key
codigo/PKI/fileserver2/certs/: chain.pem  fs_server.crt
codigo/PKI/fileserver2/csr/: fs_server.csr
codigo/PKI/fileserver2/private/: fs_server.key
codigo/PKI/root/: root-ca.conf
codigo/PKI/sub/: sub-ca.conf
codigo/common/config/: helpers.go  main.go
codigo/common/dtos/: files.go  serverinfo.go  servreg.go
codigo/common/dtos/jsend/: response.go
codigo/common/is2fs/: changes.pb.go  changes_grpc.pb.go
codigo/common/log/: logger.go
codigo/common/refutil/: refutil.go
codigo/common/runtime/: runtime.go
codigo/driver/: .clang-format  CMakeLists.txt  Makefile  TODO  config.json  demo.sh
codigo/driver/cmake/: FindFUSE3.cmake  FindRapidJSON.cmake
codigo/driver/src/: CMakeLists.txt  apierror.cpp  apierror.hpp  buildcfg.hpp  config.cpp  config.hpp  errors.cpp  errors.hpp  expected.hpp  filecache.cpp  filecache.hpp  filemanager.cpp  filemanager.hpp  filemeta.cpp  filemeta.hpp  fscatalog.cpp  fscatalog.hpp  fsclient.cpp  fsclient.hpp  fselems.cpp  fselems.hpp  fservers.cpp  fservers.hpp  fsmirror.cpp  fsmirror.hpp  fstree.cpp  fstree.hpp  fuse.cpp  fuse.hpp  fuseopts.cpp  fuseopts.hpp  gtree.hpp  http.cpp  http.hpp  httpc.cpp  httpc.hpp  isclient.cpp  isclient.hpp  iserver.hpp  istokens.cpp  (+17 more)
codigo/fileserver/api/client/: api.go
codigo/fileserver/api/oauth2/: wrapper.go
codigo/fileserver/api/server/: api.go  interceptor.go  wrapper.go
codigo/fileserver/authz/: interfaces.go  interfaces_test.go
codigo/fileserver/authz/basic/: basic.go
codigo/fileserver/cmd/server/: main.go
codigo/fileserver/filemanager/: ext.go  listener.go  manager.go  setup.go
codigo/fileserver/models/: models.go
codigo/fileserver/registrar/: isclient.go  registrar.go
codigo/fileserver/repository/: interfaces.go
codigo/fileserver/storage/: interfaces.go
codigo/indexsrv/: go.mod
codigo/indexsrv/apis/: apis.go
codigo/indexsrv/apis/users/: api.go
codigo/indexsrv/config/: main.go
codigo/indexsrv/fileindex/: interfaces.go
codigo/indexsrv/frontend/: frontend.go
codigo/indexsrv/fslinks/: auth_interceptor.go  connections.go  fslinks.go
codigo/indexsrv/mapper/: interfaces.go  mapper.go  multierr.go
codigo/indexsrv/models/: interfaces.go  updates.go
codigo/indexsrv/registrar/: interfaces.go  registrar.go  state.go  tokens.go
codigo/indexsrv/repository/: interfaces.go
codigo/infra/: Dockerfile.file_server  Dockerfile.index_server  docker.hosts  docker_compose.yml  file_server.Dockerfile  fs-entrypoint.sh  index_server.Dockerfile  is-entrypoint.sh  mongo_populator.Dockerfile  waitport.sh
codigo/is_frontend/: README.md  package-lock.json  package.json
codigo/is_frontend/src/: App.vue  main.js
codigo/protobuf/: changes.proto
codigo/scripts/: demo.sh  fileserver.fixtures.sql  fileserver.init.sql  filesrv.init.sh  fixtures.sql  fs_api.sh  idx_api.sh  indexserver.fixtures.sql  indexserver.init.sql  initdb.sql  is_api.sh  mkmongo.sh  mkpostgres.sh  mongo_populator.sh  testcmds
docs/diagramas/: tf.drawio
pocs/fileserver/: go.mod  main.go  notas.md
pocs/graphql/: go.mod  go.sum  main.go  models.go  queries.go  server.go
pocs/grpc/: .gitignore  Makefile  go.mod  user.pb.go  user.proto  user_grpc.pb.go
pocs/grpc/client/: main.go
pocs/grpc/server/: main.go
pocs/oauth2flow/: go.mod  go.sum  main.go
(+102 files in other folders)
